--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,14 @@
     <body>
         <header>
             <a href="{{ url_for('index') }}"><h1>QR Contact</h1></a>
+            <h5><i>Easier way to share contacts.</i></h5>
         </header>
         <form method="POST" action="{{ url_for('download') }}" class="">
             <div class="container mt-2">
                 <div class="row">
                     <div class="col">
                         <div class="mx-auto">
-                            <label for="first_name" class="form-label">First Name</label>
+                            <label for="first_name" class="form-label">First Name</label><span style="color: red;">*</span>
                             <input type="text" class="form-control" name="first_name" id="first_name" required>
                         </div>
                     </div>
