--- a/templates/index.html
+++ b/templates/index.html
@@ -61,5 +61,8 @@
                 </div>
             </div>
         </form>
+        <footer class="mt-auto">
+            Made by: Atharva Bhagwat.
+        </footer>
     </body>
 </html>
