Add placeholder for phone numbers

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,13 +32,13 @@
                     <div class="col">
                         <div class="mx-auto">
                             <label for="work_phone" class="form-label">Work Phone</label>
-                            <input type="tel" pattern="\+[0-9]{1,3}[0-9]{10}" class="form-control" name="work_phone" id="work_phone">
+                            <input type="tel" pattern="\+[0-9]{1,3}[0-9]{10}" class="form-control" name="work_phone" id="work_phone" placeholder="+19876543210">
                         </div>
                     </div>
                     <div class="col">
                         <div class="mx-auto">
                             <label for="home_phone" class="form-label">Home Phone</label>
-                            <input type="tel" pattern="\+[0-9]{1,3}[0-9]{10}" class="form-control" name="home_phone" id="home_phone">
+                            <input type="tel" pattern="\+[0-9]{1,3}[0-9]{10}" class="form-control" name="home_phone" id="home_phone" placeholder="+19876543210">
                         </div>
                     </div>
                 </div>
