--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div  class="submit-button">
-                    <input type="submit" class="form-control btn btn-dark" name="submit" id="submit" value="Download QR Code">
+                    <input type="submit" class="form-control btn btn-light" name="submit" id="submit" value="Download QR Code">
                 </div>
             </div>
         </form>
