Add link to report bugs

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,8 @@
             </div>
         </form>
         <footer class="mt-auto">
-            Made by: Atharva Bhagwat.
+            Made by: Atharva Bhagwat.<br>
+            Report bugs <a href="https://github.com/atharva-bhagwat/qrcontact/issues">here</a>.
         </footer>
     </body>
 </html>
