Open link in new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         </form>
         <footer class="mt-auto">
             Made by: Atharva Bhagwat.<br>
-            Report bugs <a href="https://github.com/atharva-bhagwat/qrcontact/issues">here</a>.
+            Report bugs <a href="https://github.com/atharva-bhagwat/qrcontact/issues" target="_blank">here</a>.
         </footer>
     </body>
 </html>
